--- a/boss.ini
+++ b/boss.ini
@@ -1,14 +1,7 @@
 ﻿----- 일반보스 -----
-bossname = 기감
+bossname = 기감🔮
 gentime = 01:00
 nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-mungtime = 1
-
-bossname = 이프
-gentime = 02:00
-nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 mungtime = 1
