--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,5 +1,11 @@
 -----고정보스-----
-
+bossname = 혈레이드
+bosstime = 21:00
+genPeriod = 168:00
+startDate = 2020-11-29
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 1
 
 
 
