--- a/boss.ini
+++ b/boss.ini
@@ -6,6 +6,12 @@ before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 mungtime = 1
 
+bossname = 감데
+gentime = 06:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
 bossname = 대흑
 gentime = 03:00
 nogencheck = 0
